--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ debhelper (9.20120420) UNRELEASED; urgency=low
 
   * dh_installman: Recognize sections from mdoc .Dt entries. Closes: #670210
     Thanks, Guillem Jover
+  * Updated German man page translation. Closes: #671598
 
  -- Joey Hess <joeyh@debian.org>  Tue, 24 Apr 2012 11:52:22 -0400
 
