--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,11 @@
-debhelper (9.20120420) UNRELEASED; urgency=low
+debhelper (9.20120509) unstable; urgency=low
 
   * dh_installman: Recognize sections from mdoc .Dt entries. Closes: #670210
     Thanks, Guillem Jover
   * Updated German man page translation. Closes: #671598
   * dh_install: Reorder documentation for clarity. Closes: #672109
 
- -- Joey Hess <joeyh@debian.org>  Tue, 24 Apr 2012 11:52:22 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 09 May 2012 12:59:15 -0400
 
 debhelper (9.20120419) unstable; urgency=low
 
