--- a/man/po4a/po/fr.po
+++ b/man/po4a/po/fr.po
@@ -3,7 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: debhelper manpages\n"
-"POT-Creation-Date: 2012-04-10 12:51-0400\n"
+"POT-Creation-Date: 2012-05-09 12:59-0400\n"
 "PO-Revision-Date: 2011-04-03 17:37+0200\n"
 "Last-Translator: Valery Perrin <valery.perrin.debian@free.fr>\n"
 "Language-Team: Français <debian-l10n-french@lists.debian.org>\n"
@@ -580,7 +580,7 @@ msgstr ""
 
 # type: =item
 #. type: =item
-#: debhelper.pod:185 dh_compress:52 dh_install:76 dh_installchangelogs:68
+#: debhelper.pod:185 dh_compress:52 dh_install:81 dh_installchangelogs:68
 #: dh_installdocs:75 dh_installexamples:41 dh_link:60 dh_makeshlibs:81
 #: dh_md5sums:37 dh_shlibdeps:30 dh_strip:39
 msgid "B<-X>I<item>, B<--exclude=>I<item>"
@@ -599,7 +599,7 @@ msgstr ""
 # type: =item
 #. type: =item
 #: debhelper.pod:190 dh_bugfiles:54 dh_compress:59 dh_installdirs:35
-#: dh_installdocs:70 dh_installexamples:36 dh_installinfo:35 dh_installman:64
+#: dh_installdocs:70 dh_installexamples:36 dh_installinfo:35 dh_installman:65
 #: dh_link:55
 msgid "B<-A>, B<--all>"
 msgstr "B<-A>, B<--all>"
@@ -1365,7 +1365,7 @@ msgstr ""
 #. type: =head1
 #: debhelper.pod:544 dh_auto_test:45 dh_installcatalogs:59 dh_installdocs:116
 #: dh_installemacsen:67 dh_installexamples:53 dh_installinit:128
-#: dh_installman:81 dh_installmime:51 dh_installmodules:60 dh_installudev:55
+#: dh_installman:82 dh_installmime:51 dh_installmodules:60 dh_installudev:55
 #: dh_installwm:54 dh_installxfonts:37 dh_movefiles:64 dh_strip:68
 #: dh_usrlocal:49
 msgid "NOTES"
@@ -1765,7 +1765,7 @@ msgstr ""
 #: dh_installdeb:144 dh_installdebconf:126 dh_installdirs:86
 #: dh_installdocs:307 dh_installemacsen:124 dh_installexamples:106
 #: dh_installifupdown:69 dh_installinfo:77 dh_installinit:256
-#: dh_installlogcheck:78 dh_installlogrotate:50 dh_installman:259
+#: dh_installlogcheck:78 dh_installlogrotate:50 dh_installman:261
 #: dh_installmanpages:197 dh_installmenu:87 dh_installmime:95
 #: dh_installmodules:124 dh_installpam:59 dh_installppp:65 dh_installudev:115
 #: dh_installwm:108 dh_installxfonts:87 dh_link:226 dh_lintian:57
@@ -1811,7 +1811,7 @@ msgstr "Le site internet de debhelper."
 #: dh_installdeb:150 dh_installdebconf:132 dh_installdirs:92
 #: dh_installdocs:313 dh_installemacsen:130 dh_installexamples:112
 #: dh_installifupdown:75 dh_installinfo:83 dh_installlogcheck:84
-#: dh_installlogrotate:56 dh_installman:265 dh_installmanpages:203
+#: dh_installlogrotate:56 dh_installman:267 dh_installmanpages:203
 #: dh_installmenu:95 dh_installmime:101 dh_installmodules:130 dh_installpam:65
 #: dh_installppp:71 dh_installudev:121 dh_installwm:114 dh_installxfonts:93
 #: dh_link:232 dh_lintian:65 dh_listpackages:36 dh_makeshlibs:264
@@ -1830,7 +1830,7 @@ msgstr "AUTEUR"
 #: dh_installdebconf:134 dh_installdirs:94 dh_installdocs:315
 #: dh_installemacsen:132 dh_installexamples:114 dh_installifupdown:77
 #: dh_installinfo:85 dh_installinit:264 dh_installlogrotate:58
-#: dh_installman:267 dh_installmanpages:205 dh_installmenu:97
+#: dh_installman:269 dh_installmanpages:205 dh_installmenu:97
 #: dh_installmime:103 dh_installmodules:132 dh_installpam:67 dh_installppp:73
 #: dh_installudev:123 dh_installwm:116 dh_installxfonts:95 dh_link:234
 #: dh_listpackages:38 dh_makeshlibs:266 dh_md5sums:98 dh_movefiles:178
@@ -1928,11 +1928,11 @@ msgstr ""
 #: dh:43 dh_auto_build:28 dh_auto_clean:30 dh_auto_configure:31
 #: dh_auto_install:43 dh_auto_test:31 dh_bugfiles:50 dh_builddeb:21
 #: dh_clean:41 dh_compress:48 dh_fixperms:31 dh_gconf:39 dh_gencontrol:26
-#: dh_icons:25 dh_install:54 dh_installcatalogs:49 dh_installchangelogs:56
+#: dh_icons:25 dh_install:59 dh_installcatalogs:49 dh_installchangelogs:56
 #: dh_installcron:40 dh_installdebconf:61 dh_installdirs:31 dh_installdocs:66
 #: dh_installemacsen:48 dh_installexamples:32 dh_installifupdown:39
 #: dh_installinfo:31 dh_installinit:47 dh_installlogcheck:42
-#: dh_installlogrotate:22 dh_installman:60 dh_installmanpages:40
+#: dh_installlogrotate:22 dh_installman:61 dh_installmanpages:40
 #: dh_installmenu:41 dh_installmime:41 dh_installmodules:44 dh_installpam:31
 #: dh_installppp:35 dh_installudev:35 dh_installwm:34 dh_link:51
 #: dh_makeshlibs:43 dh_md5sums:28 dh_movefiles:38 dh_perl:31 dh_prep:26
@@ -2627,7 +2627,7 @@ msgstr ""
 #: dh_installcron:79 dh_installdeb:146 dh_installdebconf:128 dh_installdirs:88
 #: dh_installdocs:309 dh_installemacsen:126 dh_installexamples:108
 #: dh_installifupdown:71 dh_installinfo:79 dh_installinit:258
-#: dh_installlogcheck:80 dh_installlogrotate:52 dh_installman:261
+#: dh_installlogcheck:80 dh_installlogrotate:52 dh_installman:263
 #: dh_installmanpages:199 dh_installmime:97 dh_installmodules:126
 #: dh_installpam:61 dh_installppp:67 dh_installudev:117 dh_installwm:110
 #: dh_installxfonts:89 dh_link:228 dh_listpackages:32 dh_makeshlibs:260
@@ -2646,7 +2646,7 @@ msgstr "L<debhelper(7)>"
 #: dh_installcron:81 dh_installdeb:148 dh_installdebconf:130 dh_installdirs:90
 #: dh_installdocs:311 dh_installemacsen:128 dh_installexamples:110
 #: dh_installifupdown:73 dh_installinfo:81 dh_installinit:260
-#: dh_installlogrotate:54 dh_installman:263 dh_installmanpages:201
+#: dh_installlogrotate:54 dh_installman:265 dh_installmanpages:201
 #: dh_installmenu:93 dh_installmime:99 dh_installmodules:128 dh_installpam:63
 #: dh_installppp:69 dh_installudev:119 dh_installwm:112 dh_installxfonts:91
 #: dh_link:230 dh_lintian:61 dh_listpackages:34 dh_makeshlibs:262
@@ -3112,7 +3112,7 @@ msgstr ""
 #: dh_installcatalogs:35 dh_installchangelogs:32 dh_installcron:21
 #: dh_installdeb:22 dh_installdebconf:34 dh_installdirs:21 dh_installdocs:21
 #: dh_installemacsen:27 dh_installexamples:22 dh_installifupdown:22
-#: dh_installinfo:21 dh_installinit:26 dh_installlogcheck:21 dh_installman:50
+#: dh_installinfo:21 dh_installinit:26 dh_installlogcheck:21 dh_installman:51
 #: dh_installmenu:25 dh_installmime:25 dh_installmodules:29 dh_installpam:21
 #: dh_installppp:21 dh_installudev:25 dh_installwm:24 dh_link:39 dh_lintian:21
 #: dh_makeshlibs:29 dh_movefiles:26
@@ -3970,15 +3970,34 @@ msgstr ""
 "d'employer des jokers (wildcard) dans les noms des fichiers à installer (à "
 "partir de la version 3)."
 
+# type: textblock
+#. type: textblock
+#: dh_install:52
+#, fuzzy
+#| msgid ""
+#| "Note that if you list exactly one filename or wildcard-pattern on a line "
+#| "by itself in a F<debian/package.install> file, with no explicit "
+#| "destination, then B<dh_install> will automatically guess the destination "
+#| "even if this flag is not set."
+msgid ""
+"Note that if you list exactly one filename or wildcard-pattern on a line by "
+"itself, with no explicit destination, then B<dh_install> will automatically "
+"guess the destination to use, the same as if the --autodest option were used."
+msgstr ""
+"Nota : Si le nom du fichier (ou le motif d'un ensemble de fichiers) est "
+"indiqué sur une ligne du fichier F<debian/paquet.install>, sans que la "
+"destination soit précisée, alors B<dh_install> déterminera automatiquement "
+"la destination, même en l'absence de l'option B<--autodest>."
+
 # type: =item
 #. type: =item
-#: dh_install:58
+#: dh_install:63
 msgid "B<--list-missing>"
 msgstr "B<--list-missing>"
 
 # type: textblock
 #. type: textblock
-#: dh_install:60
+#: dh_install:65
 msgid ""
 "This option makes B<dh_install> keep track of the files it installs, and "
 "then at the end, compare that list with the files in the source directory. "
@@ -3993,7 +4012,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_install:65
+#: dh_install:70
 msgid ""
 "This may be useful if you have a large package and want to make sure that "
 "you don't miss installing newly added files in new upstream releases."
@@ -4004,7 +4023,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_install:68
+#: dh_install:73
 msgid ""
 "Note that files that are excluded from being moved via the B<-X> option are "
 "not warned about."
@@ -4014,13 +4033,13 @@ msgstr ""
 
 # type: =item
 #. type: =item
-#: dh_install:71
+#: dh_install:76
 msgid "B<--fail-missing>"
 msgstr "B<--fail-missing>"
 
 # type: textblock
 #. type: textblock
-#: dh_install:73
+#: dh_install:78
 msgid ""
 "This option is like B<--list-missing>, except if a file was missed, it will "
 "not only list the missing files, but also fail with a nonzero exit code."
@@ -4031,7 +4050,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_install:78 dh_installexamples:43
+#: dh_install:83 dh_installexamples:43
 msgid ""
 "Exclude files that contain I<item> anywhere in their filename from being "
 "installed."
@@ -4041,17 +4060,17 @@ msgstr ""
 
 # type: =item
 #. type: =item
-#: dh_install:81 dh_movefiles:42
+#: dh_install:86 dh_movefiles:42
 msgid "B<--sourcedir=>I<dir>"
 msgstr "B<--sourcedir=>I<répertoire>"
 
 #. type: textblock
-#: dh_install:83
+#: dh_install:88
 msgid "Look in the specified directory for files to be installed."
 msgstr "Cherche dans le répertoire spécifié les fichiers à installer."
 
 #. type: textblock
-#: dh_install:85
+#: dh_install:90
 #, fuzzy
 #| msgid ""
 #| "Note that this is not the same as the B<--sourcedirectory> option used by "
@@ -4070,13 +4089,13 @@ msgstr ""
 
 # type: =item
 #. type: =item
-#: dh_install:90
+#: dh_install:95
 msgid "B<--autodest>"
 msgstr "B<--autodest>"
 
 # type: textblock
 #. type: textblock
-#: dh_install:92
+#: dh_install:97
 msgid ""
 "Guess as the destination directory to install things to. If this is "
 "specified, you should not list destination directories in F<debian/package."
@@ -4091,7 +4110,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_install:97
+#: dh_install:102
 msgid ""
 "Strip off F<debian/tmp> (or the sourcedir if one is given) from the front of "
 "the filename, if it is present, and install into the dirname of the "
@@ -4106,20 +4125,6 @@ msgstr ""
 "F<debian/tmp/usr/bin>, alors il sera copié dans F<debian/paquet/usr/>. Si le "
 "fichier à installer est F<debian/tmp/etc/passwd>, il sera copié dans "
 "F<debian/paquet/etc/>."
-
-# type: textblock
-#. type: textblock
-#: dh_install:103
-msgid ""
-"Note that if you list exactly one filename or wildcard-pattern on a line by "
-"itself in a F<debian/package.install> file, with no explicit destination, "
-"then B<dh_install> will automatically guess the destination even if this "
-"flag is not set."
-msgstr ""
-"Nota : Si le nom du fichier (ou le motif d'un ensemble de fichiers) est "
-"indiqué sur une ligne du fichier F<debian/paquet.install>, sans que la "
-"destination soit précisée, alors B<dh_install> déterminera automatiquement "
-"la destination, même en l'absence de l'option B<--autodest>."
 
 # type: =item
 #. type: =item
@@ -5028,7 +5033,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_installdocs:72 dh_installinfo:37 dh_installman:66
+#: dh_installdocs:72 dh_installinfo:37 dh_installman:67
 msgid ""
 "Install all files specified by command line parameters in ALL packages acted "
 "on."
@@ -5965,16 +5970,27 @@ msgstr ""
 # type: textblock
 #. type: textblock
 #: dh_installman:19
+#, fuzzy
+#| msgid ""
+#| "B<dh_installman> is a debhelper program that handles installing man pages "
+#| "into the correct locations in package build directories. You tell it what "
+#| "man pages go in your packages, and it figures out where to install them "
+#| "based on the section field in their B<.TH> line. If you have a properly "
+#| "formatted B<.TH> line, your man page will be installed into the right "
+#| "directory, with the right name (this includes proper handling of pages "
+#| "with a subsection, like B<3perl>, which are placed in F<man3>, and given "
+#| "an extension of F<.3perl>). If your B<.TH> line is incorrect or missing, "
+#| "the program may guess wrong based on the file extension."
 msgid ""
 "B<dh_installman> is a debhelper program that handles installing man pages "
 "into the correct locations in package build directories. You tell it what "
 "man pages go in your packages, and it figures out where to install them "
-"based on the section field in their B<.TH> line. If you have a properly "
-"formatted B<.TH> line, your man page will be installed into the right "
-"directory, with the right name (this includes proper handling of pages with "
-"a subsection, like B<3perl>, which are placed in F<man3>, and given an "
-"extension of F<.3perl>). If your B<.TH> line is incorrect or missing, the "
-"program may guess wrong based on the file extension."
+"based on the section field in their B<.TH> or B<.Dt> line. If you have a "
+"properly formatted B<.TH> or B<.Dt> line, your man page will be installed "
+"into the right directory, with the right name (this includes proper handling "
+"of pages with a subsection, like B<3perl>, which are placed in F<man3>, and "
+"given an extension of F<.3perl>). If your B<.TH> or B<.Dt> line is incorrect "
+"or missing, the program may guess wrong based on the file extension."
 msgstr ""
 "B<dh_installman> est le programme de la suite debhelper chargé de "
 "l'installation des pages de manuel à l'emplacement correct dans le "
@@ -6004,15 +6020,26 @@ msgstr ""
 # type: textblock
 #. type: textblock
 #: dh_installman:32
+#, fuzzy
+#| msgid ""
+#| "If B<dh_installman> seems to install a man page into the wrong section or "
+#| "with the wrong extension, this is because the man page has the wrong "
+#| "section listed in its B<.TH> line. Edit the man page and correct the "
+#| "section, and B<dh_installman> will follow suit. See L<man(7)> for details "
+#| "about the B<.TH> section. If B<dh_installman> seems to install a man page "
+#| "into a directory like F</usr/share/man/pl/man1/>, that is because your "
+#| "program has a name like F<foo.pl>, and B<dh_installman> assumes that "
+#| "means it is translated into Polish. Use B<--language=C> to avoid this."
 msgid ""
 "If B<dh_installman> seems to install a man page into the wrong section or "
 "with the wrong extension, this is because the man page has the wrong section "
-"listed in its B<.TH> line. Edit the man page and correct the section, and "
-"B<dh_installman> will follow suit. See L<man(7)> for details about the B<."
-"TH> section. If B<dh_installman> seems to install a man page into a "
-"directory like F</usr/share/man/pl/man1/>, that is because your program has "
-"a name like F<foo.pl>, and B<dh_installman> assumes that means it is "
-"translated into Polish. Use B<--language=C> to avoid this."
+"listed in its B<.TH> or B<.Dt> line. Edit the man page and correct the "
+"section, and B<dh_installman> will follow suit. See L<man(7)> for details "
+"about the B<.TH> section, and L<mdoc(7)> for the B<.Dt> section. If "
+"B<dh_installman> seems to install a man page into a directory like F</usr/"
+"share/man/pl/man1/>, that is because your program has a name like F<foo.pl>, "
+"and B<dh_installman> assumes that means it is translated into Polish. Use "
+"B<--language=C> to avoid this."
 msgstr ""
 "Si B<dh_installman> installe une page de manuel dans la mauvaise section ou "
 "avec une extension erronée, c'est parce que la page de manuel possède une "
@@ -6027,7 +6054,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_installman:41
+#: dh_installman:42
 msgid ""
 "After the man page installation step, B<dh_installman> will check to see if "
 "any of the man pages in the temporary directories of any of the packages it "
@@ -6040,7 +6067,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_installman:45
+#: dh_installman:46
 msgid ""
 "Also, B<dh_installman> will use man to guess the character encoding of each "
 "manual page and convert it to UTF-8. If the guesswork fails for some reason, "
@@ -6055,25 +6082,25 @@ msgstr ""
 
 # type: =item
 #. type: =item
-#: dh_installman:54
+#: dh_installman:55
 msgid "debian/I<package>.manpages"
 msgstr "debian/I<paquet>.manpages"
 
 # type: textblock
 #. type: textblock
-#: dh_installman:56
+#: dh_installman:57
 msgid "Lists man pages to be installed."
 msgstr "Liste les pages de manuel à installer."
 
 # type: =item
 #. type: =item
-#: dh_installman:69
+#: dh_installman:70
 msgid "B<--language=>I<ll>"
 msgstr "B<--language=>I<ll>"
 
 # type: textblock
 #. type: textblock
-#: dh_installman:71
+#: dh_installman:72
 msgid ""
 "Use this to specify that the man pages being acted on are written in the "
 "specified language."
@@ -6083,13 +6110,13 @@ msgstr ""
 
 # type: =item
 #. type: =item
-#: dh_installman:74
+#: dh_installman:75
 msgid "I<manpage> ..."
 msgstr "I<page-de-manuel> ..."
 
 # type: textblock
 #. type: textblock
-#: dh_installman:76
+#: dh_installman:77
 msgid ""
 "Install these man pages into the first package acted on. (Or in all packages "
 "if B<-A> is specified)."
@@ -6099,7 +6126,7 @@ msgstr ""
 
 # type: textblock
 #. type: textblock
-#: dh_installman:83
+#: dh_installman:84
 msgid ""
 "An older version of this program, L<dh_installmanpages(1)>, is still used by "
 "some packages, and so is still included in debhelper.  It is, however, "
