Improve -v logging. Closes: #672448

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120510) UNRELEASED; urgency=low
+
+  * Improve -v logging. Closes: #672448
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 11 May 2012 11:58:53 -0400
+
 debhelper (9.20120509) unstable; urgency=low
 
   * dh_installman: Recognize sections from mdoc .Dt entries. Closes: #670210
