--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20120510) UNRELEASED; urgency=low
+debhelper (9.20120513) unstable; urgency=low
 
   * Improve -v logging. Closes: #672448
   * dh_builddeb: Build udebs with xz compression, level 1, extreme strategy.
@@ -7,7 +7,7 @@ debhelper (9.20120510) UNRELEASED; urgency=low
   * Depend on a new enough dpkg for above features. Backporters will need
     to revert these changes.
 
- -- Joey Hess <joeyh@debian.org>  Fri, 11 May 2012 11:58:53 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 13 May 2012 13:09:42 -0400
 
 debhelper (9.20120509) unstable; urgency=low
 
