--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120514) UNRELEASED; urgency=low
+
+  * Fix versioned dependency on dpkg for xz options. Closes: #672895
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 14 May 2012 11:36:06 -0400
+
 debhelper (9.20120513) unstable; urgency=low
 
   * Improve -v logging. Closes: #672448
