dh_link: Doc improvement. Closes: #672988

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (9.20120514) UNRELEASED; urgency=low
 
   * Fix versioned dependency on dpkg for xz options. Closes: #672895
+  * dh_link: Doc improvement. Closes: #672988
 
  -- Joey Hess <joeyh@debian.org>  Mon, 14 May 2012 11:36:06 -0400
 
