--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (9.20120514) UNRELEASED; urgency=low
+debhelper (9.20120518) unstable; urgency=low
 
   * Fix versioned dependency on dpkg for xz options. Closes: #672895
   * dh_link: Doc improvement. Closes: #672988
 
- -- Joey Hess <joeyh@debian.org>  Mon, 14 May 2012 11:36:06 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 18 May 2012 11:05:03 -0400
 
 debhelper (9.20120513) unstable; urgency=low
 
