--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20120519) UNRELEASED; urgency=low
+
+  * Spanish translation update. Closes: #673629 Thanks, Omar Campagne
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 20 May 2012 11:02:52 -0400
+
 debhelper (9.20120518) unstable; urgency=low
 
   * Fix versioned dependency on dpkg for xz options. Closes: #672895
