--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-debhelper (9.20120519) UNRELEASED; urgency=low
+debhelper (9.20120523) unstable; urgency=low
 
   * Spanish translation update. Closes: #673629 Thanks, Omar Campagne
+  * Set Multi-Arch: foreign. Closes: #674193
 
- -- Joey Hess <joeyh@debian.org>  Sun, 20 May 2012 11:02:52 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 23 May 2012 14:55:48 -0400
 
 debhelper (9.20120518) unstable; urgency=low
 
