--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20120524) UNRELEASED; urgency=low
+
+  * dh_installcatalogs: Turn /etc/sgml/$package.cat into conffiles
+    and introduce dependency on trigger-based sgml-base. Closes: #477751
+    Thanks, Helmut Grohne
+
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2012 13:37:44 -0400
+
 debhelper (9.20120523) unstable; urgency=low
 
   * Spanish translation update. Closes: #673629 Thanks, Omar Campagne
