--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (9.20120524) UNRELEASED; urgency=low
+debhelper (9.20120528) unstable; urgency=low
 
   * dh_installcatalogs: Turn /etc/sgml/$package.cat into conffiles
     and introduce dependency on trigger-based sgml-base. Closes: #477751
     Thanks, Helmut Grohne
 
- -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2012 13:37:44 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 28 May 2012 13:40:26 -0400
 
 debhelper (9.20120523) unstable; urgency=low
 
