--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20120529) UNRELEASED; urgency=low
+
+  * dh: When there's an -indep override target without -arch, or vice versa,
+    avoid acting on packages covered by the override target when running
+    the command for packages not covered by it. Closes: #676462
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 07 Jun 2012 11:58:03 -0400
+
 debhelper (9.20120528) unstable; urgency=low
 
   * dh_installcatalogs: Turn /etc/sgml/$package.cat into conffiles
