--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20120609) UNRELEASED; urgency=low
+
+  * dh_shlibdeps: Warn if -V flag is passed, to avoid it accidentially being
+    used here rather than in dh_makeshlibs.
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
+
 debhelper (9.20120608) unstable; urgency=low
 
   * dh: When there's an -indep override target without -arch, or vice versa,
