--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ debhelper (9.20120909) UNRELEASED; urgency=low
     Closes: #665296 Thanks, Marcin Owsiany
   * Updated Spanish man page translation. Closes: #686291
   * Updated German man page translation. Closes: #685538
+  * Updated French man page translation. Closes: #685560
 
  -- Joey Hess <joeyh@debian.org>  Sun, 09 Sep 2012 14:23:10 -0400
 
