--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_shlibdeps: Warn if -V flag is passed, to avoid it accidentially being
     used here rather than in dh_makeshlibs. Closes: #680339
   * dh_lintian: Source overrides doc improvement. Closes: #683941
+  * Updated German man page translation. Closes: #685538
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
