--- a/man/po4a/po/de.po
+++ b/man/po4a/po/de.po
@@ -5,10 +5,10 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: debhelper 9.20120419\n"
+"Project-Id-Version: debhelper 9.20120609\n"
 "Report-Msgid-Bugs-To: debhelper@packages.debian.org\n"
-"POT-Creation-Date: 2012-05-18 11:05-0400\n"
-"PO-Revision-Date: 2012-04-27 18:45+0100\n"
+"POT-Creation-Date: 2012-08-13 17:34-0400\n"
+"PO-Revision-Date: 2012-08-19 22:11+0100\n"
 "Last-Translator: Chris Leick <c.leick@vollbio.de>\n"
 "Language-Team: German <debian-l10n-german@lists.debian.org>\n"
 "Language: de\n"
@@ -1595,11 +1595,11 @@ msgstr ""
 "getrennt werden, wie in B<DH_ALWAYS_EXCLUDE=CVS:.svn>."
 
 #. type: =head1
-#: debhelper.pod:674 dh:893 dh_auto_build:47 dh_auto_clean:50
+#: debhelper.pod:674 dh:903 dh_auto_build:47 dh_auto_clean:50
 #: dh_auto_configure:52 dh_auto_install:85 dh_auto_test:59 dh_bugfiles:122
 #: dh_builddeb:124 dh_clean:142 dh_compress:206 dh_desktop:31 dh_fixperms:127
 #: dh_gconf:99 dh_gencontrol:82 dh_icons:65 dh_install:258
-#: dh_installcatalogs:116 dh_installchangelogs:171 dh_installcron:77
+#: dh_installcatalogs:120 dh_installchangelogs:171 dh_installcron:77
 #: dh_installdeb:144 dh_installdebconf:126 dh_installdirs:86
 #: dh_installdocs:307 dh_installemacsen:124 dh_installexamples:106
 #: dh_installifupdown:69 dh_installinfo:77 dh_installinit:256
@@ -1608,7 +1608,7 @@ msgstr ""
 #: dh_installmodules:124 dh_installpam:59 dh_installppp:65 dh_installudev:115
 #: dh_installwm:108 dh_installxfonts:87 dh_link:228 dh_lintian:57
 #: dh_listpackages:30 dh_makeshlibs:258 dh_md5sums:90 dh_movefiles:170
-#: dh_perl:146 dh_prep:60 dh_python:280 dh_scrollkeeper:28 dh_shlibdeps:171
+#: dh_perl:146 dh_prep:60 dh_python:280 dh_scrollkeeper:28 dh_shlibdeps:175
 #: dh_strip:242 dh_suidregister:117 dh_testdir:44 dh_testroot:27
 #: dh_undocumented:28 dh_usrlocal:114
 msgid "SEE ALSO"
@@ -1637,11 +1637,11 @@ msgid "Debhelper web site."
 msgstr "Debhelper-Website"
 
 #. type: =head1
-#: debhelper.pod:688 dh:899 dh_auto_build:53 dh_auto_clean:56
+#: debhelper.pod:688 dh:909 dh_auto_build:53 dh_auto_clean:56
 #: dh_auto_configure:58 dh_auto_install:91 dh_auto_test:65 dh_bugfiles:130
 #: dh_builddeb:130 dh_clean:148 dh_compress:212 dh_desktop:37 dh_fixperms:133
 #: dh_gconf:105 dh_gencontrol:88 dh_icons:71 dh_install:264
-#: dh_installcatalogs:122 dh_installchangelogs:177 dh_installcron:83
+#: dh_installcatalogs:126 dh_installchangelogs:177 dh_installcron:83
 #: dh_installdeb:150 dh_installdebconf:132 dh_installdirs:92
 #: dh_installdocs:313 dh_installemacsen:130 dh_installexamples:112
 #: dh_installifupdown:75 dh_installinfo:83 dh_installlogcheck:84
@@ -1650,13 +1650,13 @@ msgstr "Debhelper-Website"
 #: dh_installppp:71 dh_installudev:121 dh_installwm:114 dh_installxfonts:93
 #: dh_link:234 dh_lintian:65 dh_listpackages:36 dh_makeshlibs:264
 #: dh_md5sums:96 dh_movefiles:176 dh_perl:152 dh_prep:66 dh_python:286
-#: dh_scrollkeeper:34 dh_shlibdeps:177 dh_strip:248 dh_suidregister:123
+#: dh_scrollkeeper:34 dh_shlibdeps:181 dh_strip:248 dh_suidregister:123
 #: dh_testdir:50 dh_testroot:33 dh_undocumented:34 dh_usrlocal:120
 msgid "AUTHOR"
 msgstr "AUTOR"
 
 #. type: textblock
-#: debhelper.pod:690 dh:901 dh_auto_build:55 dh_auto_clean:58
+#: debhelper.pod:690 dh:911 dh_auto_build:55 dh_auto_clean:58
 #: dh_auto_configure:60 dh_auto_install:93 dh_auto_test:67 dh_builddeb:132
 #: dh_clean:150 dh_compress:214 dh_fixperms:135 dh_gencontrol:90
 #: dh_install:266 dh_installchangelogs:179 dh_installcron:85 dh_installdeb:152
@@ -1667,7 +1667,7 @@ msgstr "AUTOR"
 #: dh_installmime:103 dh_installmodules:132 dh_installpam:67 dh_installppp:73
 #: dh_installudev:123 dh_installwm:116 dh_installxfonts:95 dh_link:236
 #: dh_listpackages:38 dh_makeshlibs:266 dh_md5sums:98 dh_movefiles:178
-#: dh_prep:68 dh_shlibdeps:179 dh_strip:250 dh_suidregister:125 dh_testdir:52
+#: dh_prep:68 dh_shlibdeps:183 dh_strip:250 dh_suidregister:125 dh_testdir:52
 #: dh_testroot:35 dh_undocumented:36
 msgid "Joey Hess <joeyh@debian.org>"
 msgstr "Joey Hess <joeyh@debian.org>"
@@ -2375,10 +2375,10 @@ msgstr ""
 "der letzte in der Sequenz benutzt."
 
 #. type: textblock
-#: dh:895 dh_auto_build:49 dh_auto_clean:52 dh_auto_configure:54
+#: dh:905 dh_auto_build:49 dh_auto_clean:52 dh_auto_configure:54
 #: dh_auto_install:87 dh_auto_test:61 dh_builddeb:126 dh_clean:144
 #: dh_compress:208 dh_fixperms:129 dh_gconf:101 dh_gencontrol:84
-#: dh_install:260 dh_installcatalogs:118 dh_installchangelogs:173
+#: dh_install:260 dh_installcatalogs:122 dh_installchangelogs:173
 #: dh_installcron:79 dh_installdeb:146 dh_installdebconf:128 dh_installdirs:88
 #: dh_installdocs:309 dh_installemacsen:126 dh_installexamples:108
 #: dh_installifupdown:71 dh_installinfo:79 dh_installinit:258
@@ -2393,7 +2393,7 @@ msgid "L<debhelper(7)>"
 msgstr "L<debhelper(7)>"
 
 #. type: textblock
-#: dh:897 dh_auto_build:51 dh_auto_clean:54 dh_auto_configure:56
+#: dh:907 dh_auto_build:51 dh_auto_clean:54 dh_auto_configure:56
 #: dh_auto_install:89 dh_auto_test:63 dh_bugfiles:128 dh_builddeb:128
 #: dh_clean:146 dh_compress:210 dh_desktop:35 dh_fixperms:131 dh_gconf:103
 #: dh_gencontrol:86 dh_icons:69 dh_install:262 dh_installchangelogs:175
@@ -2405,7 +2405,7 @@ msgstr "L<debhelper(7)>"
 #: dh_installppp:69 dh_installudev:119 dh_installwm:112 dh_installxfonts:91
 #: dh_link:232 dh_lintian:61 dh_listpackages:34 dh_makeshlibs:262
 #: dh_md5sums:94 dh_movefiles:174 dh_perl:150 dh_prep:64 dh_python:284
-#: dh_scrollkeeper:32 dh_shlibdeps:175 dh_strip:246 dh_suidregister:121
+#: dh_scrollkeeper:32 dh_shlibdeps:179 dh_strip:246 dh_suidregister:121
 #: dh_testdir:48 dh_testroot:31 dh_undocumented:32 dh_usrlocal:118
 msgid "This program is a part of debhelper."
 msgstr "Dieses Programm ist Teil von Debhelper."
@@ -2916,6 +2916,8 @@ msgid ""
 "It supports building multiple binary packages in parallel, when enabled by "
 "DEB_BUILD_OPTIONS."
 msgstr ""
+"Es unterstützt das parallele Bauen mehrerer Pakete, wenn dies durch "
+"DEB_BUILD_OPTIONS aktiviert wurde."
 
 #. type: textblock
 #: dh_builddeb:30
@@ -3561,21 +3563,15 @@ msgstr ""
 
 #. type: textblock
 #: dh_install:52
-#, fuzzy
-#| msgid ""
-#| "Note that if you list exactly one filename or wildcard-pattern on a line "
-#| "by itself in a F<debian/package.install> file, with no explicit "
-#| "destination, then B<dh_install> will automatically guess the destination "
-#| "even if this flag is not set."
 msgid ""
 "Note that if you list exactly one filename or wildcard-pattern on a line by "
 "itself, with no explicit destination, then B<dh_install> will automatically "
 "guess the destination to use, the same as if the --autodest option were used."
 msgstr ""
 "Beachten Sie, falls Sie genau einen Dateinamen oder ein Platzhaltermuster "
-"allein auf einer Zeile in einer F<debian/Paket.install>-Datei ohne "
-"explizites Ziel aufführen, B<dh_install> automatisch das Ziel abschätzen "
-"wird, sogar wenn dieser Schalter nicht gesetzt ist."
+"allein auf einer Zeile ohne ein ausdrückliches Ziel aufführen, wird "
+"B<dh_install> automatisch das Ziel abschätzen, sogar wenn dieser Schalter "
+"nicht gesetzt ist."
 
 #. type: =item
 #: dh_install:63
@@ -3825,12 +3821,12 @@ msgstr ""
 "Textes hinzugefügt werden."
 
 #. type: textblock
-#: dh_installcatalogs:120
+#: dh_installcatalogs:124
 msgid "F</usr/share/doc/sgml-base-doc/>"
 msgstr "F</usr/share/doc/sgml-base-doc/>"
 
 #. type: textblock
-#: dh_installcatalogs:124
+#: dh_installcatalogs:128
 msgid "Adam Di Carlo <aph@debian.org>"
 msgstr "Adam Di Carlo <aph@debian.org>"
 
@@ -5275,17 +5271,6 @@ msgstr "B<dh_installman> [S<I<Debhelper-Optionen>>] [S<I<Handbuchseite> …>]"
 
 #. type: textblock
 #: dh_installman:19
-#, fuzzy
-#| msgid ""
-#| "B<dh_installman> is a debhelper program that handles installing man pages "
-#| "into the correct locations in package build directories. You tell it what "
-#| "man pages go in your packages, and it figures out where to install them "
-#| "based on the section field in their B<.TH> line. If you have a properly "
-#| "formatted B<.TH> line, your man page will be installed into the right "
-#| "directory, with the right name (this includes proper handling of pages "
-#| "with a subsection, like B<3perl>, which are placed in F<man3>, and given "
-#| "an extension of F<.3perl>). If your B<.TH> line is incorrect or missing, "
-#| "the program may guess wrong based on the file extension."
 msgid ""
 "B<dh_installman> is a debhelper program that handles installing man pages "
 "into the correct locations in package build directories. You tell it what "
@@ -5301,13 +5286,13 @@ msgstr ""
 "Handbuchseiten an die korrekten Speicherorte in Paketbauverzeichnissen "
 "handhabt. Sie teilen ihm mit, welche Handbuchseiten in Ihr Paket kommen und "
 "es ergründet, wohin sie installiert werden, basierend auf dem Abschnittsfeld "
-"in der B<.TH>-Zeile. Falls Sie eine ordentlich formatierte B<.TH>-Zeile "
-"haben, wird Ihre Handbuchseite in das richtige Verzeichnis mit dem richtigen "
-"Namen installiert (dies umfasst eine ordentliche Handhabung von Seiten mit "
-"einem Unterabschnitt wie B<3perl>, die in F<man3> platziert werden und "
-"Angabe einer Erweiterung von F<.3perl>). Falls Ihre B<.TH>-Zeile nicht "
-"korrekt ist oder fehlt, wird das Programm möglicherweise aufgrund der "
-"Dateiendung falsch raten."
+"in ihrer B<.TH>- oder B<.Dt>-Zeile. Falls Sie eine ordentlich formatierte "
+"B<.TH>- oder B<.Dt>-Zeile haben, wird Ihre Handbuchseite in das richtige "
+"Verzeichnis mit dem richtigen Namen installiert (dies umfasst eine "
+"ordentliche Handhabung von Seiten mit einem Unterabschnitt wie B<3perl>, die "
+"in F<man3> platziert werden und Angabe einer Erweiterung von F<.3perl>). "
+"Falls Ihre B<.TH>- oder B<.Dt>-Zeile nicht korrekt ist oder fehlt, wird das "
+"Programm möglicherweise aufgrund der Dateiendung falsch raten."
 
 #. type: textblock
 #: dh_installman:29
@@ -5321,16 +5306,6 @@ msgstr ""
 
 #. type: textblock
 #: dh_installman:32
-#, fuzzy
-#| msgid ""
-#| "If B<dh_installman> seems to install a man page into the wrong section or "
-#| "with the wrong extension, this is because the man page has the wrong "
-#| "section listed in its B<.TH> line. Edit the man page and correct the "
-#| "section, and B<dh_installman> will follow suit. See L<man(7)> for details "
-#| "about the B<.TH> section. If B<dh_installman> seems to install a man page "
-#| "into a directory like F</usr/share/man/pl/man1/>, that is because your "
-#| "program has a name like F<foo.pl>, and B<dh_installman> assumes that "
-#| "means it is translated into Polish. Use B<--language=C> to avoid this."
 msgid ""
 "If B<dh_installman> seems to install a man page into the wrong section or "
 "with the wrong extension, this is because the man page has the wrong section "
@@ -5343,15 +5318,16 @@ msgid ""
 "B<--language=C> to avoid this."
 msgstr ""
 "Falls B<dh_installman> eine Handbuchseite in den falschen Abschnitt oder mit "
-"der falschen Endung zu installieren scheint, ist dies, weil die "
-"Handbuchseite den falschen Abschnitt in ihrer B<.TH>-Zeile aufführt. "
+"der falschen Endung zu installieren scheint, ist dies, weil die Handbuchseite "
+"den falschen Abschnitt in ihrer B<.TH>- oder B<.Dt>-Zeile aufführt. "
 "Bearbeiten Sie die Handbuchseite, korrigieren Sie den Abschnitt und "
 "B<dh_installman> wird passend folgen. Einzelheiten über die B<.TH>-Zeile "
-"finden Sie in L<man(7)>. Falls B<dh_installman> eine Handbuchseite in ein "
-"Verzeichnis wie F</usr/share/man/pl/man1/> zu installieren scheint, ist "
-"dies, weil Ihr Programm einen Namen wie F<foo.pl> hat und B<dh_installman> "
-"annimmt, dass dies bedeutet, sie sei ins Polnische übersetzt. Benutzen Sie "
-"B<--language=C>, um dies zu vermeiden."
+"finden Sie in L<man(7)> und über die B<.Dt>-Zeile in L<mdoc(7)>. Falls "
+"B<dh_installman> eine Handbuchseite in ein Verzeichnis wie "
+"F</usr/share/man/pl/man1/> zu installieren scheint, ist dies, weil Ihr "
+"Programm einen Namen wie F<foo.pl> hat und B<dh_installman> annimmt, dass "
+"dies bedeutet, sie sei ins Polnische übersetzt. Benutzen Sie B<--language=C>, "
+"um dies zu vermeiden."
 
 #. type: textblock
 #: dh_installman:42
@@ -6129,6 +6105,8 @@ msgstr ""
 #: dh_link:36
 msgid "Any pre-existing destination files will be replaced with symlinks."
 msgstr ""
+"Alle vorher existierenden Zieldateien werden durch symbolische Verweise "
+"ersetzt."
 
 #. type: textblock
 #: dh_link:38
@@ -6265,8 +6243,8 @@ msgstr ""
 
 #. type: =item
 #: dh_lintian:31
-msgid "F<debian/source.lintian-overrides>"
-msgstr "F<debian/source.lintian-overrides>"
+msgid "F<debian/source/lintian-overrides>"
+msgstr "F<debian/source/lintian-overrides>"
 
 #. type: textblock
 #: dh_lintian:33
@@ -7255,7 +7233,7 @@ msgstr ""
 "\t\n"
 
 #. type: textblock
-#: dh_shlibdeps:173
+#: dh_shlibdeps:177
 msgid "L<debhelper(7)>, L<dpkg-shlibdeps(1)>"
 msgstr "L<debhelper(7)>, L<dpkg-shlibdeps(1)>"
 
@@ -7494,7 +7472,7 @@ msgstr ""
 #. type: textblock
 #: dh_testdir:29
 msgid "Test for the existence of these files too."
-msgstr "testet auch, ob diese Dateien existeren."
+msgstr "testet auch, ob diese Dateien existieren."
 
 #. type: textblock
 #: dh_testroot:5
