Updated German man page translation. Closes: #685538
Conflicts:
	debian/changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ debhelper (9.20120909) UNRELEASED; urgency=low
     such as dh_installxmlcatalogs that encounter the problem.
     Closes: #665296 Thanks, Marcin Owsiany
   * Updated Spanish man page translation. Closes: #686291
+  * Updated German man page translation. Closes: #685538
 
  -- Joey Hess <joeyh@debian.org>  Sun, 09 Sep 2012 14:23:10 -0400
 
