--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     used here rather than in dh_makeshlibs. Closes: #680339
   * dh_lintian: Source overrides doc improvement. Closes: #683941
   * Updated German man page translation. Closes: #685538
+  * Updated French man page translation. Closes: #685560
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
