--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,9 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_lintian: Source overrides doc improvement. Closes: #683941
   * Updated German man page translation. Closes: #685538
   * Updated French man page translation. Closes: #685560
+  * dh_installmime: No longer makes maintainer scripts run update-mime and
+    update-mime-database, that is now handled by triggers. Closes: #684689
+    Thanks, Charles Plessy
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
