--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     Thanks, Charles Plessy
   * python distutils buildsystem: Propigate failure of pyversions.
     Closes: #683551 Thanks, Clint Byrum
+  * dh_icons: Improve documentation. Closes: #684895
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
