python distutils buildsystem: When checking if a version of python is installed, don't trust the presense of the executable, as a python2.X-minimal package may provide it while not having distutils installed. Closes: #683557
python hate increasing..

--- a/debian/changelog
+++ b/debian/changelog
@@ -10,6 +10,10 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     Thanks, Charles Plessy
   * python distutils buildsystem: Propigate failure of pyversions.
     Closes: #683551 Thanks, Clint Byrum
+  * python distutils buildsystem: When checking if a version of python is
+    installed, don't trust the presense of the executable, as
+    a python2.X-minimal package may provide it while not having
+    distutils installed. Closes: #683557
   * dh_icons: Improve documentation. Closes: #684895
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
