dh_installcatalogs: Adjust catalog conffile conversion to avoid dpkg conffile prompt when upgrading from a removed package. Closes: #81194

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20120830) unstable; urgency=low
+
+  * dh_installcatalogs: Adjust catalog conffile conversion to avoid
+    dpkg conffile prompt when upgrading from a removed package.
+    Closes: #681194
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 30 Aug 2012 11:04:10 -0400
+
 debhelper (9.20120608) unstable; urgency=low
 
   * dh: When there's an -indep override target without -arch, or vice versa,
