Updated Spanish man page translation. Closes: #686291
Conflicts:
	debian/changelog
	man/po4a/po/es.po

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ debhelper (9.20120909) UNRELEASED; urgency=low
     interface in the future; for now it can be used by specific commands
     such as dh_installxmlcatalogs that encounter the problem.
     Closes: #665296 Thanks, Marcin Owsiany
+  * Updated Spanish man page translation. Closes: #686291
 
  -- Joey Hess <joeyh@debian.org>  Sun, 09 Sep 2012 14:23:10 -0400
 
