--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     a python2.X-minimal package may provide it while not having
     distutils installed. Closes: #683557
   * dh_icons: Improve documentation. Closes: #684895
+  * Improve -X documentation. Closes: #686696
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
