--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20120909) UNRELEASED; urgency=low
+debhelper (9.20120909) unstable; urgency=low
 
   * autoscript() can now be passed a perl sub to run to s/// lines of
     the script, which avoids problems with using sed, including potentially
@@ -10,7 +10,7 @@ debhelper (9.20120909) UNRELEASED; urgency=low
   * Updated German man page translation. Closes: #685538
   * Updated French man page translation. Closes: #685560
 
- -- Joey Hess <joeyh@debian.org>  Sun, 09 Sep 2012 14:23:10 -0400
+ -- Joey Hess <joeyh@debian.org>  Mon, 10 Sep 2012 12:54:06 -0400
 
 debhelper (9.20120830) unstable; urgency=low
 
