--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,8 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     distutils installed. Closes: #683557
   * dh_icons: Improve documentation. Closes: #684895
   * Improve -X documentation. Closes: #686696
+  * Support installing multiple doc-base files which use the same doc-id.
+    (Closes: #525821)
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
