--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,9 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * Improve -X documentation. Closes: #686696
   * Support installing multiple doc-base files which use the same doc-id.
     (Closes: #525821)
+  * dh_installdocs: Support having the same document id in different binary
+    packages built from the same source.
+    Closes: #525821 Thanks, Don Armstrong
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
