adjust other fix
This is really atrocious, but IIRC the order pythons are run in matters,
so the earlier mangling of @python_requested must remain, and so unmangle
it here.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,7 +11,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * python distutils buildsystem: When checking if a version of python is
     installed, don't trust the presense of the executable, as
     a python2.X-minimal package may provide it while not having
-    distutils installed. Closes: #683557
+    distutils installed. Closes: #683557, #690378
   * dh_icons: Improve documentation. Closes: #684895
   * Improve -X documentation. Closes: #686696
   * Support installing multiple doc-base files which use the same doc-id.
