dh_installdeb: Avoid unnecessary is_udeb tests. Closes: #691398

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
     Closes: #525821 Thanks, Don Armstrong
   * dh_installinit: Support systemd.
     Closes: #690399 Thanks, Michael Stapelberg
+  * dh_installdeb: Avoid unnecessary is_udeb tests. Closes: #691398
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
 
