--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20120609) UNRELEASED; urgency=low
+debhelper (9.20130504) unstable; urgency=low
 
   * dh_shlibdeps: Warn if -V flag is passed, to avoid it accidentially being
     used here rather than in dh_makeshlibs. Closes: #680339
@@ -6,7 +6,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_installmime: No longer makes maintainer scripts run update-mime and
     update-mime-database, that is now handled by triggers. Closes: #684689
     Thanks, Charles Plessy
-  * python distutils buildsystem: Propigate failure of pyversions.
+  * python distutils buildsystem: Propagate failure of pyversions.
     Closes: #683551 Thanks, Clint Byrum
   * python distutils buildsystem: When checking if a version of python is
     installed, don't trust the presense of the executable, as
@@ -15,7 +15,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_icons: Improve documentation. Closes: #684895
   * Improve -X documentation. Closes: #686696
   * Support installing multiple doc-base files which use the same doc-id.
-    (Closes: #525821)
+    Closes: #525821
   * dh_installdocs: Support having the same document id in different binary
     packages built from the same source.
     Closes: #525821 Thanks, Don Armstrong
@@ -32,7 +32,7 @@ debhelper (9.20120609) UNRELEASED; urgency=low
   * dh_auto_test: Avoid doing anything when cross-compiling. Closes: #703262
   * dh_testdir: Fix error message. Closes: #703515
 
- -- Joey Hess <joeyh@debian.org>  Thu, 05 Jul 2012 08:51:07 -0600
+ -- Joey Hess <joeyh@debian.org>  Sat, 04 May 2013 23:32:27 -0400
 
 debhelper (9.20120909) unstable; urgency=low
 
