dh_installdeb: Drop pre-dependency on dpkg for dpkg-maintscript-helper. Closes: #703264

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ debhelper (9.20130505) UNRELEASED; urgency=low
     within commands that provide a high-level description of the command.)
   * perl_makemaker: Unset INSTALL_BASE in case the user has it set.
     Closes: #705141
+  * dh_installdeb: Drop pre-dependency on dpkg for dpkg-maintscript-helper.
+    Closes: #703264
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 May 2013 11:34:20 -0400
 
