makefile buildsystem: Pass any parameters specified after -- when running make -n to test for the existance of targets. In some makefiles, the parameters may be necessary to enable a target. Closes: #706923

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,10 @@ debhelper (9.20130505) UNRELEASED; urgency=low
     Closes: #705141
   * dh_installdeb: Drop pre-dependency on dpkg for dpkg-maintscript-helper.
     Closes: #703264
+  * makefile buildsystem: Pass any parameters specified after -- when
+    running make -n to test for the existance of targets.
+    In some makefiles, the parameters may be necessary to enable a target.
+    Closes: #706923
 
  -- Joey Hess <joeyh@debian.org>  Sun, 05 May 2013 11:34:20 -0400
 
