--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (9.20130505) UNRELEASED; urgency=low
+debhelper (9.20130507) unstable; urgency=low
 
   * dh: Skips running commands that it can tell will do nothing.
     Closes: #560423
     (Commands that can be skipped are determined by the presence of
-    special PROMISE directives within commands that provide a high-level
+    PROMISE directives within commands that provide a high-level
     description of the command.)
   * perl_makemaker: Unset INSTALL_BASE in case the user has it set.
     Closes: #705141
@@ -16,7 +16,7 @@ debhelper (9.20130505) UNRELEASED; urgency=low
   * Revert python2.X-minimal fix, because it was buggy.
     Closes: #707111 (Reopens #683557)
 
- -- Joey Hess <joeyh@debian.org>  Sun, 05 May 2013 11:34:20 -0400
+ -- Joey Hess <joeyh@debian.org>  Tue, 07 May 2013 13:20:48 -0400
 
 debhelper (9.20130504) unstable; urgency=low
 
