dh_installinit: Remove obsolete systemd-tempfiles hack in postinst autoscript. Closes: #707159

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130508) UNRELEASED; urgency=low
+
+  * dh_installinit: Remove obsolete systemd-tempfiles hack in postinst
+    autoscript. Closes: #707159
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 07 May 2013 19:42:52 -0400
+
 debhelper (9.20130507) unstable; urgency=low
 
   * dh: Skips running commands that it can tell will do nothing.
