dh_installinfo: Stop inserting dependencies for partial upgrades from lenny to squeeze. Closes: #707218

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ debhelper (9.20130508) UNRELEASED; urgency=low
 
   * dh_installinit: Remove obsolete systemd-tempfiles hack in postinst
     autoscript. Closes: #707159
+  * dh_installinfo: Stop inserting dependencies for partial upgrades
+    from lenny to squeeze. Closes: #707218
 
  -- Joey Hess <joeyh@debian.org>  Tue, 07 May 2013 19:42:52 -0400
 
