dh: As a workaround for anything not in debhelper that may rely on debhelper command that is now skipped creating the package build directory, the directory is created when a command is skipped. This workaround is disabled in compat level 10. Closes: #707336

--- a/debhelper.pod
+++ b/debhelper.pod
@@ -536,7 +536,8 @@ Changes from v9 are:
 
 =item -
 
-None yet..
+B<dh> no longer creates the package build directory when skipping
+running debhelper commands.
 
 =back
 
