--- a/debhelper.pod
+++ b/debhelper.pod
@@ -537,7 +537,9 @@ Changes from v9 are:
 =item -
 
 B<dh> no longer creates the package build directory when skipping
-running debhelper commands.
+running debhelper commands. This will not affect packages that only build
+with debhelper commands, but it may expose bugs in commands not included in
+debhelper.
 
 =back
 
