Revert unsetting INSTALL_BASE. Closes: #708452 Reopens: #705141

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20130510) UNRELEASED; urgency=low
+
+  * Revert unsetting INSTALL_BASE. Closes: #708452 Reopens: #705141
+
+ -- Joey Hess <joeyh@debian.org>  Thu, 16 May 2013 18:27:50 -0400
+
 debhelper (9.20130509) unstable; urgency=low
 
   * dh_installinit: Remove obsolete systemd-tempfiles hack in postinst
