dh_installinit: Add versioned dependency on sysv-rc when shipping upstart jobs. Closes: #708720

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130517) UNRELEASED; urgency=low
+
+  * dh_installinit: Add versioned dependency on sysv-rc
+    when shipping upstart jobs. Closes: #708720
+
+ -- Joey Hess <joeyh@debian.org>  Sat, 18 May 2013 10:34:18 -0400
+
 debhelper (9.20130516) unstable; urgency=low
 
   * Revert unsetting INSTALL_BASE. Closes: #708452 Reopens: #705141
