dh_installchangelogs: Write the changelog entry used for a binNMU, as flagged by binary-only=yes to a separate file, in order to work around infelicities in dpkg's multiarch support. Closes: #708218 (Thanks, Ansgar Burchardt)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 debhelper (9.20130517) UNRELEASED; urgency=low
 
+  * dh_installchangelogs: Write the changelog entry used for a binNMU,
+    as flagged by binary-only=yes to a separate file, in order to work
+    around infelicities in dpkg's multiarch support. Closes: #708218
+    (Thanks, Ansgar Burchardt)
   * dh_installinit: Add versioned dependency on sysv-rc
     when shipping upstart jobs. Closes: #708720
 
