--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-debhelper (9.20130517) UNRELEASED; urgency=low
+debhelper (9.20130518) unstable; urgency=low
 
   * dh_installchangelogs: Write the changelog entry used for a binNMU,
     as flagged by binary-only=yes to a separate file, in order to work
@@ -7,7 +7,7 @@ debhelper (9.20130517) UNRELEASED; urgency=low
   * dh_installinit: Add versioned dependency on sysv-rc
     when shipping upstart jobs. Closes: #708720
 
- -- Joey Hess <joeyh@debian.org>  Sat, 18 May 2013 10:34:18 -0400
+ -- Joey Hess <joeyh@debian.org>  Sat, 18 May 2013 10:49:09 -0400
 
 debhelper (9.20130516) unstable; urgency=low
 
