Allow building debhelper with USE_NLS=no to not require po4a to build. Closes: #709557

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130519) UNRELEASED; urgency=low
+
+  * Allow building debhelper with USE_NLS=no to not require po4a to build.
+    Closes: #709557
+
+ -- Joey Hess <joeyh@debian.org>  Fri, 24 May 2013 11:08:12 -0400
+
 debhelper (9.20130518) unstable; urgency=low
 
   * dh_installchangelogs: Write the changelog entry used for a binNMU,
