dh_installchangelogs: No longer automatically converts html changelogs. A plain text version can be provided as a second parameter, or it will generate a file with a pointer to the html changelog if not. html2text's reign of terror has ended. Closes: #562874

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,9 @@
 debhelper (9.20130519) UNRELEASED; urgency=low
 
+  * dh_installchangelogs: No longer automatically converts html changelogs.
+    A plain text version can be provided as a second parameter, or it will
+    generate a file with a pointer to the html changelog if not.
+    html2text's reign of terror has ended. Closes: #562874
   * Allow building debhelper with USE_NLS=no to not require po4a to build.
     Closes: #709557
 
