Correct broken patch for #706923. Closes: #707481

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ debhelper (9.20130519) UNRELEASED; urgency=low
     html2text's reign of terror has ended. Closes: #562874
   * Allow building debhelper with USE_NLS=no to not require po4a to build.
     Closes: #709557
+  * Correct broken patch for #706923.
+    Closes: #707481
 
  -- Joey Hess <joeyh@debian.org>  Fri, 24 May 2013 11:08:12 -0400
 
