--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-debhelper (9.20130605) UNRELEASED; urgency=low
+debhelper (9.20130605) unstable; urgency=low
 
   * dh_installchangelogs: Fix bug preventing automatic installation of
     upstream changelog. Closes: #711131
 
- -- Joey Hess <joeyh@debian.org>  Wed, 05 Jun 2013 12:28:19 -0400
+ -- Joey Hess <joeyh@debian.org>  Wed, 05 Jun 2013 12:28:51 -0400
 
 debhelper (9.20130604) unstable; urgency=low
 
