dh_installinit: Use absolute path for systemd tempfiles, for compatability with wheezy's systemd. Closes: #712727

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (9.20130606) UNRELEASED; urgency=low
+
+  * dh_installinit: Use absolute path for systemd tempfiles,
+    for compatability with wheezy's systemd. Closes: #712727
+
+ -- Joey Hess <joeyh@debian.org>  Tue, 18 Jun 2013 20:13:45 -0400
+
 debhelper (9.20130605) unstable; urgency=low
 
   * dh_installchangelogs: Fix bug preventing automatic installation of
