--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (9.20130626) unstable; urgency=low
+
+  * dh_strip: Run readelf in C locale. Closes: #714187
+
+ -- Joey Hess <joeyh@debian.org>  Wed, 26 Jun 2013 13:37:03 -0400
+
 debhelper (9.20130624) unstable; urgency=low
 
   * dh_installinit: Use absolute path for systemd tempfiles,
