perl_build: Use -- long option names, for compatability with Module::Build::Tiny. Closes: #714544 (Thanks, gregor herrmann)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (9.20130627) UNRELEASED; urgency=low
+
+  * perl_build: Use -- long option names, for compatability with
+    Module::Build::Tiny. Closes: #714544
+    (Thanks, gregor herrmann)
+
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Jun 2013 13:09:28 -0400
+
 debhelper (9.20130626) unstable; urgency=low
 
   * dh_strip: Run readelf in C locale. Closes: #714187
