--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,10 @@
-debhelper (9.20130627) UNRELEASED; urgency=low
+debhelper (9.20130630) unstable; urgency=low
 
-  * perl_build: Use -- long option names, for compatability with
+  * perl_build: Use -- long option names, for compatibility with
     Module::Build::Tiny. Closes: #714544
     (Thanks, gregor herrmann)
 
- -- Joey Hess <joeyh@debian.org>  Sun, 30 Jun 2013 13:09:28 -0400
+ -- Joey Hess <joeyh@debian.org>  Sun, 30 Jun 2013 14:20:51 -0400
 
 debhelper (9.20130626) unstable; urgency=low
 
